# geocache-compression

./: .gitignore  .gitmodules  README.md  pre-submit.sh
src/: CMakeLists.txt  abc-combine.cpp  abc-combine.py  abc-compare.cpp  abc-parse.cpp  abc-separate.cpp  abc-separate.py  embed.py  reconstruct.py  svd.py  usd-separate.ipynb
src/cmake/: FindAlembic.cmake
src/embedding/: clustering.py  embedding.py  encoding.py  io.py  metric.py  util.py
src/embedding/tests/: test_clustering.py  test_data.py  test_embedding.py  test_encoding.py  test_util.py
